<resources>
    <string name="app_name">HUEIC MOVIES</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_search">Search</string>
    <string name="title_tab_favourite">Favourite</string>
    <string name="title_tab_profile">Profile</string>
    <string name="empty_data">Empty Data</string>
    <string name="empty_avatar_movie">No Avatar</string>
    <string name="overview">Overview</string>
    <string name="search">Search</string>
    <string name="no_results_found">No results found!</string>
    <string name="trailer">Trailer</string>
    <string name="thumbnail_image_view_desc">Thumnail Video</string>
    <string name="background_video">Background thumnail video</string>
    <string name="play_button">Play button</string>
</resources>
