<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fstyle.androidtrainning.screen.detailmovie.DetailsMovieActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <FrameLayout
                android:id="@+id/frame_detailmovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/imageBigView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_200"
                    android:contentDescription="@string/empty_avatar_movie"
                    android:scaleType="fitXY"
                    />

                <ImageView
                    android:id="@+id/imageSmallView"
                    android:layout_width="@dimen/dp_150"
                    android:layout_height="@dimen/dp_170"
                    android:layout_marginTop="190dp"
                    android:contentDescription="@string/empty_avatar_movie"
                    android:cropToPadding="false"
                    />

                <ImageView
                    android:id="@+id/imageFavorite"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginStart="@dimen/dp_340"
                    android:layout_marginLeft="@dimen/dp_340"
                    android:layout_marginTop="@dimen/dp_175"
                    android:contentDescription="@string/empty_avatar_movie"
                    android:src="@drawable/ic_favorite_selector"
                    style="@style/ButtonFavoriteStyle"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_150"
                    android:layout_marginStart="@dimen/dp_150"
                    android:layout_marginTop="@dimen/dp_200"
                    >
                    <TextView
                        android:id="@+id/textTitleMovie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dp_10"
                        android:textSize="@dimen/sp_25"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/textPublishTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textTitleMovie"
                        android:paddingTop="@dimen/dp_10"
                        android:textSize="@dimen/sp_17"
                        />
                    <ImageView
                        android:id="@+id/imageTimeTotal"
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:layout_below="@id/textPublishTime"
                        android:contentDescription="@string/empty_avatar_movie"
                        android:paddingTop="@dimen/dp_10"
                        android:src="@drawable/ic_clock"
                        />

                    <TextView
                        android:id="@+id/textTimeMovie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textPublishTime"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginStart="@dimen/dp_20"
                        android:layout_toEndOf="@+id/imageTimeTotal"
                        android:layout_toRightOf="@+id/imageTimeTotal"
                        android:paddingTop="@dimen/dp_10"
                        />

                    <ImageView
                        android:id="@+id/imageActor"
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:layout_below="@+id/textTimeMovie"
                        android:contentDescription="@string/empty_avatar_movie"
                        android:paddingTop="@dimen/dp_10"
                        android:src="@drawable/ic_note"
                        />

                    <TextView
                        android:id="@+id/textKindMovie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/textTimeMovie"
                        android:layout_alignStart="@+id/textTimeMovie"
                        android:layout_below="@+id/imageTimeTotal"
                        android:paddingTop="@dimen/dp_10"
                        />
                    <ImageView
                        android:id="@+id/imageRate"
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:contentDescription="@string/empty_avatar_movie"
                        android:layout_below="@+id/textKindMovie"
                        android:paddingTop="@dimen/dp_10"
                        android:src="@drawable/ic_star"
                        />
                    <TextView
                        android:id="@+id/textRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/textTimeMovie"
                        android:layout_alignStart="@+id/textTimeMovie"
                        android:layout_below="@+id/imageActor"
                        android:paddingTop="@dimen/dp_10"
                        />
                </RelativeLayout>
            </FrameLayout>
            <View
                android:id="@+id/view_overview"
                android:layout_width="match_parent"
                android:layout_below="@id/frame_detailmovie"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/colorView"
                />
            <TextView
                android:id="@+id/text_titleoverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_overview"
                android:padding="@dimen/dp_10"
                android:text="@string/overview"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_25"
                />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_titleoverview"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:textSize="@dimen/sp_15"
                />

            <View
                android:id="@+id/view_trailer"
                android:layout_below="@id/text_overview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/colorView"
                />
            <TextView
                android:id="@+id/text_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_trailer"
                android:padding="@dimen/dp_10"
                android:text="@string/trailer"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_25"
                />
            <FrameLayout
                android:id="@+id/frame_trailer"
                android:layout_below="@id/text_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_20"
                >
                <FrameLayout
                    android:id="@+id/frame_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_202"
                    />
                <com.google.android.youtube.player.YouTubeThumbnailView
                    android:id="@+id/youtube_thumnail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_202"
                    android:contentDescription="@string/thumbnail_image_view_desc"
                    android:scaleType="centerCrop"
                    />
                <RelativeLayout
                    android:id="@+id/relative_play"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_202"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_202"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/background_video"
                        android:src="@color/colorBackgroundVideo"
                        />

                    <ImageView
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_50"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_play_circle"
                        android:contentDescription="@string/play_button"
                        />
                </RelativeLayout>
            </FrameLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
